RESOLVED FIXED 263209
URL in saved iframe resource is wrong when iframe embeds another iframe
https://bugs.webkit.org/show_bug.cgi?id=263209
Summary URL in saved iframe resource is wrong when iframe embeds another iframe
Sihui Liu
Reported 2023-10-16 12:56:19 PDT
...
Attachments
Sihui Liu
Comment 1 2023-10-16 12:56:40 PDT
Sihui Liu
Comment 2 2023-10-16 13:18:55 PDT
EWS
Comment 3 2023-10-17 14:48:57 PDT
Committed 269429@main (5b6b22b02a76): <https://commits.webkit.org/269429@main> Reviewed commits have been landed. Closing PR #19125 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.